# mcp-news-aggregator

./: README.md  startup-prompt.md
.devcontainer/: devcontainer.json
mcp-server/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-server/agents/: news_agent.py
mcp-server/frontend/src/: App.jsx
mcp-server/src/mcp_server/: main.py
samples/: get_articles.md  get_events.md  get_events1.json  get_events2.json  get_events3.json  sample_get_article1.json  sample_get_article2.json  sample_get_article3.json  sample_get_article4.json  sample_get_article5json
